More layout updates

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ color:
 # Social network usernames
 social:
   - title: twitter
-    url: http://twitter.com/pinecode
+    url: http://twitter.com/pinecodedotca
   - title: github
     url: http://github.com/pinecode
 
