Added blog theme foundation

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Site settings
 title: Pinecode
-email: echo.pony@gmail.com
-description: "Here's a description of Pinecode and how great Pinecode is!"
+email: sales@pinecode.ca
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
