--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Pinecode
-email: sales@pinecode.ca
+email: steve@pinecode.ca
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
